<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/catalog_container_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:clipChildren="false"
    android:orientation="vertical"
    android:theme="@style/DayNightTheme">

    <TextView
        android:id="@+id/product_title"
        style="@style/Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/product_description"
        style="@style/Body"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_title"
        android:layout_gravity="start"
        android:textAlignment="viewStart" />

    <TextView
        android:id="@+id/product_price"
        style="@style/Body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_description"
        android:layout_marginTop="@dimen/product_catalog_price_top_margin"
        android:layout_marginBottom="@dimen/product_catalog_price_bottom_margin"
        android:layout_marginLeft="@dimen/product_catalog_price_side_margin"
        android:layout_toRightOf="@id/product_image"
        android:text="@string/price"
        android:textAlignment="viewStart"
        android:textStyle="normal|bold" />

    <Button
        android:id="@+id/cta_button"
        android:layout_width="@dimen/product_catalog_cta_button_width"
        android:layout_height="@dimen/product_catalog_cta_button_height"
        android:layout_below="@id/product_price"
        android:layout_marginLeft="@dimen/product_catalog_price_side_margin"
        android:layout_toRightOf="@id/product_image"
        android:text="@string/buy_now"
        android:textAlignment="center"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/vertical_catalog_thumbnail_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/product_image"
        android:layout_below="@id/cta_button">

        <ImageView
            android:id="@+id/product_thumbnail_1"
            android:scaleType="center"
            android:layout_weight="1"
            android:layout_height="@dimen/product_catalog_mini_image_height"
            android:layout_width="@dimen/product_catalog_mini_image_width"
            android:layout_marginTop="@dimen/product_catalog_mini_top_margin"
            android:layout_marginLeft="@dimen/product_catalog_price_side_margin"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/product_thumbnail_1" />

        <ImageView
            android:id="@+id/product_thumbnail_2"
            android:scaleType="center"
            android:layout_weight="1"
            android:layout_height="@dimen/product_catalog_mini_image_height"
            android:layout_width="@dimen/product_catalog_mini_image_width"
            android:layout_marginTop="@dimen/product_catalog_mini_top_margin"
            android:layout_marginLeft="@dimen/product_catalog_mini_side_margin"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/product_thumbnail_2" />

        <ImageView
            android:id="@+id/product_thumbnail_3"
            android:scaleType="center"
            android:layout_weight="1"
            android:layout_height="@dimen/product_catalog_mini_image_height"
            android:layout_width="@dimen/product_catalog_mini_image_width"
            android:layout_marginTop="@dimen/product_catalog_mini_top_margin"
            android:layout_marginLeft="@dimen/product_catalog_mini_side_margin"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/product_thumbnail_3" />
    </LinearLayout>

    <ImageView
        android:id="@+id/product_image"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:layout_width="@dimen/product_catalog_image_width"
        android:layout_height="@dimen/product_catalog_image_height"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/product_description"
        android:layout_alignBottom="@id/vertical_catalog_thumbnail_layout"
        android:contentDescription="@string/big_product_image"/>
</RelativeLayout>